# HW2

./: Prob_1HW6.csv  Prob_2Trail1HW6.csv  Prob_2Trail2HW6.csv  Prob_2Trail3HW6.csv  Prob_3HW3P1.csv  Prob_3HW6Run2.csv  Prob_5HW6.csv  Prob_6HW6P1.csv  Prob_6HW6P2.csv  Prob_6HW6P3.csv  Prob_7HW6P1.csv  Prob_7HW6P2.csv  Prob_8HW6.csv  README.md
HW 4/unmanned_systems_ros2_pkg/unmanned_systems_ros2_pkg/scripts/: ros2_hw_4_node.py
HW3/: Astarpath.py  HW3_Question1.py  HW3_Question3.py  random_path.py
HW5/: Problem_5.py  turtlebot_pid.py  turtlebot_wp.py
Luis_Rivas_unmanned_systems_2023/: HW1_Node.py  HW2_Question1.py  HW2_Question2.py  HW2_Question3.py  HW2_Question4.py
unmanned_systems_ros2_pkg/: CMakeLists.txt
unmanned_systems_ros2_pkg/Exam2/: AStarAlgorithm.py  Dijkstras.py  Problem3E2.py  Problem4E2.py
unmanned_systems_ros2_pkg/launch/: multi_spawn_turtle_launch.py
unmanned_systems_ros2_pkg/launch/__pycache__/: spawn_turtlebot.laun.py
unmanned_systems_ros2_pkg/scripts/: Prob_1HW6.py  Prob_2HW6.py  Prob_3HW6.py  Prob_4HW6.py  Prob_4PurHW6.py  Prob_6HW6.py  Prob_7HW6.py  Prob_8HW6.py  Prob_8PurHW6.py  Problem_1HW5.py  Problem_2HW5.py  animated_pn.py  evader.py  logger.py  logger_pursuit.py  pn.py  template_node.py  turtlebot_simple.py  turtlebot_spawn.py
unmanned_systems_ros2_pkg/unmanned_systems_ros2_pkg/: PIDTemplate.py  ProNav.py  TurtleBotNode.py  some_python_module.py
unmanned_systems_ros2_pkg/unmanned_systems_ros2_pkg/log/: Oct_06_21_29.csv
unmanned_systems_ros2_pkg/unmanned_systems_ros2_pkg/scripts/: logger.py
